--- a/css/test05_2.html
+++ b/css/test05_2.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <title>HTML</title>
   <style>
+
+  body {
+    border: 10px solid blue;
+    margin: 0px;
+    padding: 0px;
+  }
   /* 안쪽 여백 주기*/
   div {
     border: 2px solid gray;
+
   }
 
   #menu {
