--- a/css/test06_1.html
+++ b/css/test06_1.html
@@ -23,7 +23,7 @@
   }
 
   #content {
-    font-family: 궁서체, 바탕체, AppleMyungjo, serif;
+    font-family: 궁사체, 버탕체, AppleMyungjo, serif;
   }
 
   #footer {
