--- a/css/test07_10.html
+++ b/css/test07_10.html
@@ -19,10 +19,10 @@
   }
 
   #state {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     font-family: myfont; /* OS에 설치된 폰트가 아니라 외부에서 다운받은 폰트*/
     position: relative;
-    top: 3px;
+    top: 5px;
     display: inline-block;
     width: 16px;
     height: 16px;
