--- a/css/test08_1.html
+++ b/css/test08_1.html
@@ -17,7 +17,8 @@
   }
 
   div {
-    float: left;
+    xfloat: left;
+    display: inline-block;
     border-width: 5px;
     border-color: lightgray;
     background-color: blue;
