--- a/css/test09_2.html
+++ b/css/test09_2.html
@@ -24,12 +24,12 @@
   }
 
   ul, ol {
-    border: 1px solid red;
+    xborder: 1px solid red;
   }
 
   ol {
     xdisplay: none;
-    xvisibility: hidden;
+    visibility: hidden;
   }
 
   #content ul {
