--- a/css/test10_6.html
+++ b/css/test10_6.html
@@ -12,22 +12,22 @@
     font-family: '맑은 고딕', 굴림체, 'Apple SD Gothic Neo', sans-serif;
     font-size: medium;
     border: 5px solid black;
-    xmargin: 10px;
+    margin: 10px;
     position:relative;
-    xmin-height: 550px;
+    min-height: 550px;
     min-width: 600px;
   }
 
   address {
-    xdisplay: inline;
+    display: inline;
     font-style: normal;
   }
 
   #bitcamp {
     background-color: gray;
     color: white;
-    xborder-radius: 4px;
-    xpadding: 3px 3px 0px 3px;
+    border-radius: 4px;
+    padding: 3px 3px 0px 3px;
   }
 
   #company {
@@ -58,8 +58,8 @@
     border: 1px solid red;
     margin-left: 184px;
     padding: 10px;
-    xheight: 500px;
-    min-height: 500px;
+    height: 500px;
+    min-height: 510px;
   }
 
   #footer {
@@ -67,9 +67,11 @@
     /* 왼쪽에 이 태그의 내용을 가리는 것이 있다면
         그 아래로 위치하도록 이동시킨다.
         단 왼쪽에 있는 것이 float 객체일 때!*/
-    xclear: left; 
+    clear: left; 
     text-align: center;
     border: 1px solid red;
+    bottom: -200px;
+    position:absolute;
   }
 
   #footer > p {
