--- a/css/test10_9.html
+++ b/css/test10_9.html
@@ -157,7 +157,7 @@
   <p>Copyright by BITCamp</p>
   </div>
 
-</div> <!-- #main -->
+</div><!--m#ain-->
 
 <div id="ad">
 <button id="closeBtn" type="button">X</button>
