--- a/css/test10_5.html
+++ b/css/test10_5.html
@@ -22,6 +22,7 @@
   body {
     border: 5px dashed black;
     margin: 10px;
+    padding: 0px;
     position: relative;
   }
 
@@ -60,8 +61,11 @@
     background-color: yellow;
     position: absolute;
     margin: 0px;
-    right: 10px;
-    top: 5px;
+
+    bottom: -50px;
+    xright: 10px;
+    xtop: 0px;
+    xleft: 0px;
   }
   </style>
 </head>
