--- a/frontend-app/app/board/view.html
+++ b/frontend-app/app/board/view.html
@@ -13,7 +13,7 @@
     <tbody>
       <tr>
         <th>번호</th>
-        <td><input type="text" name="no" id="f-no"></td>
+        <td><input type="text" name="no" id="f-no" readonly></td>
       </tr>
       <tr>
         <th>제목</th>
@@ -63,17 +63,75 @@
   }
 
   fetch(`http://localhost:8080/boards/${no}`)
-  .then((response) => {return response.json();})
-  .then((obj) => {console.log(obj);})
-  .catch((err) => {console.log(err);});
+  .then((response) => response.json())
+  .then((obj) => {
+    if (obj.status == "failure") {
+      alert("서버 요청 오류!");
+      console.log(obj.data);
+      return;
+    }
+
+
+    document.querySelector("#f-no").value = obj.data.no;
+    document.querySelector("#f-title").value = obj.data.title;
+    document.querySelector("#f-content").value = obj.data.content;    
+    document.querySelector("#f-createddate").innerHTML = obj.data.createdDate;
+    document.querySelector("#f-viewcount").innerHTML = obj.data.viewCount;
+    })
+  .catch((err) => {
+    alert
+    console.log(err);});
 
 
   document.querySelector('#update-btn').onclick = (e) => {
-    console.log("변경");
+    var title = encodeURIComponent(document.querySelector('#f-title').value);
+    var content = encodeURIComponent(document.querySelector('#f-content').value);
+    var password = document.querySelector('#f-password').value;
+    
+    // console.log(`title=${title}&content=${content}&password=${password}`);
+    fetch(`http://localhost:8080/boards/${no}`, {
+      method: 'PUT',
+      headers: {
+        'Content-Type': 'application/x-www-form-urlencoded',
+      },
+      body: `title=${title}&content=${content}&password=${password}`,
+    })
+    .then((response) => response.json())
+    .then((obj) =>  {
+      if (obj.status == "failure") {
+        alert("게시글 변경 오류 \n" + obj.data);
+        return;
+      }
+      location.href = "list.html";})
+    .catch((err) => {
+      alert("서버 요청 오류");
+      console.log(err);
+    });
   }
 
   document.querySelector('#delete-btn').onclick = (e) => {
-    console.log("삭제");
+
+    var password = prompt('암호를 입력하세요!');
+
+    fetch(`http://localhost:8080/boards/${no}`, {
+      method: 'DELETE',
+      headers: {
+        'Content-Type': 'application/x-www-form-urlencoded',
+      },
+      body: `password=${password}`
+    })
+    .then((response) => response.json())
+    .then((obj) =>  {
+      if (obj.status == "failure") {
+        alert("게시글 삭제 오류 \n" + obj.data);
+        return;
+      }
+      location.href = "list.html";})
+    .catch((err) => {
+      alert("서버 요청 오류");
+      console.log(err);
+    });
+
   }
   document.querySelector('#list-btn').onclick = (e) => {
     location.href = "list.html"
